--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,46 +1,145 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
 
-#header2-5 H1 {
-  font-family: 'Roboto', sans-serif;
-}
-#header2-5 P {
-  color: #ffffff;
-}
-#msg-box4-9 .mbr-header__text {
-  color: #ffffff;
-}
-#msg-box4-9 .mbr-header__subtext {
-  color: #ffffff;
-}
-#msg-box4-9 .mbr-article {
-  color: #ffffff;
-}
-#content5-b .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-b .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-b .mbr-article {
-  color: #fff;
-}
-#msg-box1-c .mbr-header .mbr-header__text {
-  color: #fff;
-}
-#msg-box1-c .mbr-article {
-  color: #fff;
-}
-#ext_menu-g .mbr-brand__name {
+#menu-z .mbr-brand__name {
   font-size: 16px;
 }
-#ext_menu-g.mbr-navbar--stuck .mbr-navbar__section {
-  background: #2c2c2c;
+#menu-z.mbr-navbar--stuck .mbr-navbar__section {
+  background: #f97352;
 }
-#ext_menu-g .mbr-navbar__section {
-  background: #2c2c2c;
+#menu-z .mbr-navbar__hamburger {
+  color: #ffffff;
 }
-#ext_menu-g .mbr-navbar__hamburger {
+#menu-z .mbr-brand__name a {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+#menu-z .mbr-navbar__items a {
+  font-size: 14px;
+}
+#form1-10 .mbr-header__text {
+  color: #ffffff;
+}
+
+#menu-12 .mbr-brand__name {
+  font-size: 16px;
+}
+#menu-12.mbr-navbar--stuck .mbr-navbar__section {
+  background: #f97352;
+}
+#menu-12 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-12 .mbr-brand__name a {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+#menu-12 .mbr-navbar__items a {
+  font-size: 14px;
+}
+
+
+
+#header2-18 H1 {
+  font-family: 'Roboto', sans-serif;
+  color: #efefef;
+}
+#header2-18 P {
+  color: #b8312f;
+  font-size: 24px;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+}
+#msg-box5-19 .mbr-header__text {
+  color: #ffffff;
+}
+#msg-box5-19 .mbr-header__subtext {
+  color: #ffffff;
+}
+#msg-box5-19 .mbr-article {
+  color: #ffffff;
+}
+#msg-box1-1b .mbr-header .mbr-header__text {
+  color: #fff;
+}
+#msg-box1-1b .mbr-article {
+  color: #fff;
+}
+#testimonials1-1c .mbr-section__header {
+  color: #27aae0;
+}
+#menu-1e .mbr-brand__name {
+  font-size: 16px;
+}
+#menu-1e.mbr-navbar--stuck .mbr-navbar__section {
+  background: #f97352;
+}
+#menu-1e .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-1e .mbr-brand__name a {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+#menu-1e .mbr-navbar__items a {
+  font-size: 14px;
+}
+
+#menu-1v .mbr-brand__name {
+  font-size: 16px;
+}
+#menu-1v.mbr-navbar--stuck .mbr-navbar__section {
+  background: #f97352;
+}
+#menu-1v .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-1v .mbr-brand__name a {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+#menu-1v .mbr-navbar__items a {
+  font-size: 14px;
+}
+
+#menu-x .mbr-brand__name {
+  font-size: 16px;
+}
+#menu-x.mbr-navbar--stuck .mbr-navbar__section {
+  background: #27aae0;
+}
+#menu-x .mbr-navbar__hamburger {
+  color: #27aae0;
+}
+#menu-x .mbr-brand__name a {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+#menu-x .mbr-navbar__items a {
+  font-size: 14px;
+}
+
+#menu-1w .mbr-brand__name {
+  font-size: 16px;
+}
+#menu-1w.mbr-navbar--stuck .mbr-navbar__section {
+  background: #f97352;
+}
+#menu-1w .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-1w .mbr-brand__name a {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+#menu-1w .mbr-navbar__items a {
+  font-size: 14px;
+}
+#msg-box5-20 .mbr-header__text {
+  color: #ffffff;
+}
+#msg-box5-20 .mbr-header__subtext {
+  color: #ffffff;
+}
+#msg-box5-20 .mbr-article {
   color: #ffffff;
 }
