--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -123,6 +123,11 @@
   font-size: 12px;
   font-family: 'Lato', sans-serif;
 }
+
+
+#header4-2q H1 {
+  font-family: 'Open Sans', sans-serif;
+}
 #msg-box1-2u .mbr-header .mbr-header__text {
   color: #fff;
 }
@@ -133,16 +138,20 @@
   font-size: 16px;
 }
 #ext_menu-2p.mbr-navbar--stuck .mbr-navbar__section {
-  background: #ffffff;
+  background: #efefef;
 }
 #ext_menu-2p .mbr-navbar__section {
-  background: #ffffff;
+  background: #efefef;
 }
 #ext_menu-2p .mbr-navbar__hamburger {
   color: #ffffff;
 }
 #ext_menu-2p .mbr-brand__name a {
   font-size: 36px;
+}
+#ext_menu-2p .mbr-navbar__items a {
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
 }
 
 
