--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -138,10 +138,10 @@
   font-size: 16px;
 }
 #ext_menu-2p.mbr-navbar--stuck .mbr-navbar__section {
-  background: #efefef;
+  background: #ffffff;
 }
 #ext_menu-2p .mbr-navbar__section {
-  background: #efefef;
+  background: #ffffff;
 }
 #ext_menu-2p .mbr-navbar__hamburger {
   color: #ffffff;
