--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -1,11 +1,4 @@
-.engine {
-	position: absolute;
-	text-indent: -2400px;
-	text-align: center;
-	padding: 0;
-	top: 0;
-	left: -2400px;
-}/*!
+/*!
  * Mobirise v4 theme (https://mobirise.com/)
  * Copyright 2017 Mobirise
  */
@@ -195,10 +188,13 @@ figure[mbr-media-size] {
   background-color: transparent;
   border: none; }
 
+.card-box {
+  width: 100%; }
+
 .card-img {
   text-align: center;
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0; }
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0; }
 
 .media {
   max-width: 100%;
@@ -260,13 +256,13 @@ nav .mbr-section-btn {
   min-height: 100vh; }
 
 .mbr-fullscreen {
+  display: flex;
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
   display: -o-flex;
-  display: flex;
-  -webkit-align-items: center;
   align-items: center;
+  -webkit-align-items: center;
   min-height: 100vh;
   padding-top: 3rem;
   padding-bottom: 3rem; }
@@ -277,7 +273,7 @@ nav .mbr-section-btn {
   position: relative; }
   .map iframe {
     width: 100%;
-    min-height: 100%; }
+    height: 100%; }
 
 /* Form */
 .form-asterisk {
@@ -295,8 +291,8 @@ nav .mbr-section-btn {
   z-index: 5000;
   color: #ffffff;
   font-size: 32px;
-  -webkit-transform: rotate(180deg);
-  transform: rotate(180deg); }
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg); }
 
 .mbr-arrow-up a {
   background: rgba(0, 0, 0, 0.2);
@@ -359,8 +355,8 @@ nav .mbr-section-btn {
 
 @keyframes arrowdown {
   0% {
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px); }
+    transform: translateY(0px);
+    -webkit-transform: translateY(0px); }
   50% {
     transform: translateY(-5px);
     -webkit-transform: translateY(-5px); }
@@ -372,17 +368,17 @@ nav .mbr-section-btn {
     transform: translateY(0px);
     -webkit-transform: translateY(0px); }
   50% {
-    -webkit-transform: translateY(-5px);
-    transform: translateY(-5px); }
+    transform: translateY(-5px);
+    -webkit-transform: translateY(-5px); }
   100% {
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px); } }
+    transform: translateY(0px);
+    -webkit-transform: translateY(0px); } }
 @media (max-width: 500px) {
   .mbr-arrow-up {
     left: 50%;
     right: auto;
-    -webkit-transform: translateX(-50%) rotate(180deg);
-    transform: translateX(-50%) rotate(180deg); } }
+    transform: translateX(-50%) rotate(180deg);
+    -webkit-transform: translateX(-50%) rotate(180deg); } }
 /*Gradients animation*/
 @keyframes gradient-animation {
   from {
@@ -400,32 +396,36 @@ nav .mbr-section-btn {
     animation-timing-function: ease-in-out; } }
 .bg-gradient {
   background-size: 200% 200%;
-  -webkit-animation: gradient-animation 5s infinite alternate;
-  animation: gradient-animation 5s infinite alternate; }
+  animation: gradient-animation 5s infinite alternate;
+  -webkit-animation: gradient-animation 5s infinite alternate; }
 
 .menu .navbar-brand {
   display: -webkit-flex; }
   .menu .navbar-brand span {
-    display: -webkit-flex;
-    display: flex; }
+    display: flex;
+    display: -webkit-flex; }
   .menu .navbar-brand .navbar-caption-wrap {
     display: -webkit-flex; }
   .menu .navbar-brand .navbar-logo img {
     display: -webkit-flex; }
-@media (max-width: 767px) {
-  .menu .navbar-collapse {
-    max-height: 60vh;
-    overflow-y: auto; } }
 @media (min-width: 768px) and (max-width: 991px) {
   .menu .navbar-toggleable-sm .navbar-nav {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox; } }
+@media (max-width: 991px) {
+  .menu .navbar-collapse {
+    max-height: 93.5vh; }
+    .menu .navbar-collapse.show {
+      overflow: auto; } }
 @media (min-width: 992px) {
   .menu .navbar-nav.nav-dropdown {
     display: -webkit-flex; }
   .menu .navbar-toggleable-sm .navbar-collapse {
     display: -webkit-flex !important; } }
+@media (max-width: 767px) {
+  .menu .navbar-collapse {
+    max-height: 80vh; } }
 
 .navbar {
   display: -webkit-flex;
@@ -442,6 +442,10 @@ nav .mbr-section-btn {
   padding: .667em 1.667em !important;
   margin: 0 !important; }
 
+.nav {
+  display: -webkit-flex;
+  -webkit-flex-wrap: wrap; }
+
 .row {
   display: -webkit-flex;
   -webkit-flex-wrap: wrap; }
@@ -449,18 +453,62 @@ nav .mbr-section-btn {
 .justify-content-center {
   -webkit-justify-content: center; }
 
+.form-inline {
+  display: -webkit-flex;
+  -webkit-flex-flow: row wrap;
+  -webkit-align-items: center; }
+
 .card-wrapper {
-  -webkit-flex: 1 1 auto;
-  flex: 1 1 auto; }
+  -webkit-flex: 1; }
 
 .carousel-control {
+  z-index: 10;
   display: -webkit-flex;
   -webkit-align-items: center;
   -webkit-justify-content: center; }
 
-.carousel-control-prev, .carousel-control-next {
-  display: -webkit-flex;
-  -webkit-align-items: center;
-  -webkit-justify-content: center; }
+.carousel-controls {
+  display: -webkit-flex; }
 
-/*# sourceMappingURL=style.css.map */
+.media {
+  display: -webkit-flex; }
+
+.form-group:focus {
+  outline: none; }
+
+.jq-selectbox__select {
+  padding: 1.07em .5em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; }
+
+.jq-selectbox__dropdown {
+  position: absolute;
+  top: 100% !important;
+  left: 0 !important;
+  width: 100% !important; }
+
+.jq-selectbox__trigger-arrow {
+  transform: translateY(-50%); }
+
+.jq-selectbox li {
+  padding: 1.07em .5em; }
+
+div[data-for^="input-range"] input {
+  padding-left: 0;
+  padding-right: 0; }
+
+.modal-dialog, .modal-content {
+  height: 100%; }
+
+.modal-dialog .carousel-inner {
+  height: 100%;
+  height: -webkit-fill-available;
+  height: fill-available; }
+
+.carousel-item {
+  text-align: center; }
+
+.carousel-item img {
+  margin: auto; }
