create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1424,21 +1424,6 @@ body {
 .cid-rPhzy1gkkx H3 {
   color: #ffffff;
 }
-.cid-rPhCbVg5FL {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-rPhCbVg5FL P {
-  color: #767676;
-}
-.cid-rPhCbVg5FL .mbr-text,
-.cid-rPhCbVg5FL .mbr-section-btn {
-  text-align: left;
-}
-.cid-rPhCbVg5FL H1 {
-  color: #0f7699;
-}
 .cid-rPhzXzf69S {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1456,6 +1441,21 @@ body {
 .cid-rPhzXzf69S .card-img span {
   font-size: 96px;
   color: #149dcc;
+}
+.cid-rPhCbVg5FL {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rPhCbVg5FL P {
+  color: #767676;
+}
+.cid-rPhCbVg5FL .mbr-text,
+.cid-rPhCbVg5FL .mbr-section-btn {
+  text-align: left;
+}
+.cid-rPhCbVg5FL H1 {
+  color: #0f7699;
 }
 .cid-rUstNqTjQq .dropdown-item:before {
   font-family: MobiriseIcons !important;
@@ -1562,11 +1562,13 @@ body {
 .cid-rUstNqTjQq .navbar .mbr-overlay {
   z-index: -1;
   transition: all .3s;
-  background: #ffffff;
+  background: #232323;
+  background: linear-gradient(#52bdf1, #232323);
 }
 .cid-rUstNqTjQq .navbar.opened .mbr-overlay {
   transition: all .3s;
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar .dropdown-item {
   padding: .25rem 1.5rem;
@@ -1705,7 +1707,8 @@ body {
   min-height: 60px;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .mbr-overlay {
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .navbar-logo img {
   height: 3rem !important;
@@ -1743,7 +1746,7 @@ body {
   padding: 0.667em 1.667em;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -1782,7 +1785,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #149dcc;
 }
 .cid-rUstNqTjQq button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1863,7 +1866,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #149dcc;
+  background-color: #55b4d4;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -2084,11 +2087,13 @@ body {
 .cid-rUstNqTjQq .navbar .mbr-overlay {
   z-index: -1;
   transition: all .3s;
-  background: #ffffff;
+  background: #232323;
+  background: linear-gradient(#52bdf1, #232323);
 }
 .cid-rUstNqTjQq .navbar.opened .mbr-overlay {
   transition: all .3s;
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar .dropdown-item {
   padding: .25rem 1.5rem;
@@ -2227,7 +2232,8 @@ body {
   min-height: 60px;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .mbr-overlay {
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .navbar-logo img {
   height: 3rem !important;
@@ -2265,7 +2271,7 @@ body {
   padding: 0.667em 1.667em;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -2304,7 +2310,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #149dcc;
 }
 .cid-rUstNqTjQq button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2385,7 +2391,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #149dcc;
+  background-color: #55b4d4;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -2591,11 +2597,13 @@ body {
 .cid-rUstNqTjQq .navbar .mbr-overlay {
   z-index: -1;
   transition: all .3s;
-  background: #ffffff;
+  background: #232323;
+  background: linear-gradient(#52bdf1, #232323);
 }
 .cid-rUstNqTjQq .navbar.opened .mbr-overlay {
   transition: all .3s;
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar .dropdown-item {
   padding: .25rem 1.5rem;
@@ -2734,7 +2742,8 @@ body {
   min-height: 60px;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .mbr-overlay {
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .navbar-logo img {
   height: 3rem !important;
@@ -2772,7 +2781,7 @@ body {
   padding: 0.667em 1.667em;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -2811,7 +2820,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #149dcc;
 }
 .cid-rUstNqTjQq button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2892,7 +2901,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #149dcc;
+  background-color: #55b4d4;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -3096,11 +3105,13 @@ body {
 .cid-rUstNqTjQq .navbar .mbr-overlay {
   z-index: -1;
   transition: all .3s;
-  background: #ffffff;
+  background: #232323;
+  background: linear-gradient(#52bdf1, #232323);
 }
 .cid-rUstNqTjQq .navbar.opened .mbr-overlay {
   transition: all .3s;
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar .dropdown-item {
   padding: .25rem 1.5rem;
@@ -3239,7 +3250,8 @@ body {
   min-height: 60px;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .mbr-overlay {
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .navbar-logo img {
   height: 3rem !important;
@@ -3277,7 +3289,7 @@ body {
   padding: 0.667em 1.667em;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -3316,7 +3328,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #149dcc;
 }
 .cid-rUstNqTjQq button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3397,7 +3409,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #149dcc;
+  background-color: #55b4d4;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -3601,11 +3613,13 @@ body {
 .cid-rUstNqTjQq .navbar .mbr-overlay {
   z-index: -1;
   transition: all .3s;
-  background: #ffffff;
+  background: #232323;
+  background: linear-gradient(#52bdf1, #232323);
 }
 .cid-rUstNqTjQq .navbar.opened .mbr-overlay {
   transition: all .3s;
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar .dropdown-item {
   padding: .25rem 1.5rem;
@@ -3744,7 +3758,8 @@ body {
   min-height: 60px;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .mbr-overlay {
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .navbar-logo img {
   height: 3rem !important;
@@ -3782,7 +3797,7 @@ body {
   padding: 0.667em 1.667em;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -3821,7 +3836,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #149dcc;
 }
 .cid-rUstNqTjQq button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3902,7 +3917,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #149dcc;
+  background-color: #55b4d4;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -4112,11 +4127,13 @@ body {
 .cid-rUstNqTjQq .navbar .mbr-overlay {
   z-index: -1;
   transition: all .3s;
-  background: #ffffff;
+  background: #232323;
+  background: linear-gradient(#52bdf1, #232323);
 }
 .cid-rUstNqTjQq .navbar.opened .mbr-overlay {
   transition: all .3s;
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar .dropdown-item {
   padding: .25rem 1.5rem;
@@ -4255,7 +4272,8 @@ body {
   min-height: 60px;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .mbr-overlay {
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .navbar-logo img {
   height: 3rem !important;
@@ -4293,7 +4311,7 @@ body {
   padding: 0.667em 1.667em;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -4332,7 +4350,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #149dcc;
 }
 .cid-rUstNqTjQq button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4413,7 +4431,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #149dcc;
+  background-color: #55b4d4;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -4617,11 +4635,13 @@ body {
 .cid-rUstNqTjQq .navbar .mbr-overlay {
   z-index: -1;
   transition: all .3s;
-  background: #ffffff;
+  background: #232323;
+  background: linear-gradient(#52bdf1, #232323);
 }
 .cid-rUstNqTjQq .navbar.opened .mbr-overlay {
   transition: all .3s;
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar .dropdown-item {
   padding: .25rem 1.5rem;
@@ -4760,7 +4780,8 @@ body {
   min-height: 60px;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .mbr-overlay {
-  background: #ffffff !important;
+  background: #232323 !important;
+  background: linear-gradient(#52bdf1, #232323) !important;
 }
 .cid-rUstNqTjQq .navbar.navbar-short .navbar-logo img {
   height: 3rem !important;
@@ -4798,7 +4819,7 @@ body {
   padding: 0.667em 1.667em;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-rUstNqTjQq .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -4837,7 +4858,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #149dcc;
 }
 .cid-rUstNqTjQq button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4918,7 +4939,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #149dcc;
+  background-color: #55b4d4;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
