--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1866,7 +1866,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #55b4d4;
+  background-color: #149dcc;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -2391,7 +2391,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #55b4d4;
+  background-color: #149dcc;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -2901,7 +2901,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #55b4d4;
+  background-color: #149dcc;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -3409,7 +3409,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #55b4d4;
+  background-color: #149dcc;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -3917,7 +3917,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #55b4d4;
+  background-color: #149dcc;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -4431,7 +4431,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #55b4d4;
+  background-color: #149dcc;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
@@ -4939,7 +4939,7 @@ body {
 .cid-rUstNqTjQq .menu-top {
   text-align: center;
   width: 100%;
-  background-color: #55b4d4;
+  background-color: #149dcc;
   padding: .5rem 0;
 }
 .cid-rUstNqTjQq .full-link {
