create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1940,7 +1940,7 @@ body {
 .cid-rUsDgS5j6A {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #efefef;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-rUsDgS5j6A p {
   text-align: center;
@@ -2420,7 +2420,7 @@ body {
 .cid-rUsDgS5j6A {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #efefef;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-rUsDgS5j6A p {
   text-align: center;
@@ -2930,7 +2930,7 @@ body {
 .cid-rUsDgS5j6A {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #efefef;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-rUsDgS5j6A p {
   text-align: center;
@@ -3438,7 +3438,7 @@ body {
 .cid-rUsDgS5j6A {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #efefef;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-rUsDgS5j6A p {
   text-align: center;
@@ -3946,7 +3946,7 @@ body {
 .cid-rUsDgS5j6A {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #efefef;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-rUsDgS5j6A p {
   text-align: center;
@@ -4460,7 +4460,7 @@ body {
 .cid-rUsDgS5j6A {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #efefef;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-rUsDgS5j6A p {
   text-align: center;
@@ -4968,7 +4968,7 @@ body {
 .cid-rUsDgS5j6A {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #efefef;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-rUsDgS5j6A p {
   text-align: center;
