create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2176,6 +2176,345 @@ body {
     margin-right: 1rem;
   }
 }
+.cid-s636vhp2de {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-s636vhp2de .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-s636vhp2de .timeline-text-content {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  margin-left: 2rem;
+}
+.cid-s636vhp2de .timeline-text-content p {
+  margin-bottom: 0;
+}
+.cid-s636vhp2de .time-line-date-content {
+  margin-right: 2rem;
+}
+.cid-s636vhp2de .time-line-date-content p {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  float: right;
+}
+.cid-s636vhp2de .timeline-element {
+  margin-bottom: 50px;
+  position: relative;
+  word-wrap: break-word;
+  word-break: break-word;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+}
+.cid-s636vhp2de .timeline-element:hover .mbr-timeline-date {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-s636vhp2de .timeline-element:hover .timeline-text-content {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-s636vhp2de .mbr-timeline-date,
+.cid-s636vhp2de .timeline-text-content {
+  transition: all .4s;
+}
+.cid-s636vhp2de .reverse {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-s636vhp2de .reverse .timeline-text-content {
+  margin-right: 2rem;
+  margin-left: 0;
+}
+.cid-s636vhp2de .reverse .time-line-date-content {
+  margin-left: 2rem;
+  margin-right: 0rem;
+}
+.cid-s636vhp2de .reverse .time-line-date-content p {
+  float: left;
+}
+.cid-s636vhp2de .iconBackground {
+  position: absolute;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 30px;
+  display: inline-block;
+  background-color: #ffffff;
+  top: 20px;
+  margin-left: -10px;
+}
+.cid-s636vhp2de .separline:before {
+  top: 20px;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 2px;
+  background-color: #ffffff;
+  left: calc(50% - 1px);
+  height: calc(100% + 4rem);
+}
+@media (max-width: 768px) {
+  .cid-s636vhp2de .iconBackground {
+    left: 0 !important;
+  }
+  .cid-s636vhp2de .separline:before {
+    left: 0!important;
+  }
+  .cid-s636vhp2de .timeline-text-content {
+    margin-left: 0 !important;
+  }
+  .cid-s636vhp2de .time-line-date-content {
+    margin-right: 0 !important;
+  }
+  .cid-s636vhp2de .time-line-date-content p {
+    float: left !important;
+  }
+  .cid-s636vhp2de .reverse .time-line-date-content {
+    margin-left: 0 !important;
+  }
+  .cid-s636vhp2de .reverse .timeline-text-content {
+    margin-right: 0 !important;
+  }
+}
+.cid-s636vhp2de .reverseTimeline {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.cid-s636vMRqbR {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-s636vMRqbR .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-s636vMRqbR .timeline-text-content {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  margin-left: 2rem;
+}
+.cid-s636vMRqbR .timeline-text-content p {
+  margin-bottom: 0;
+}
+.cid-s636vMRqbR .time-line-date-content {
+  margin-right: 2rem;
+}
+.cid-s636vMRqbR .time-line-date-content p {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  float: right;
+}
+.cid-s636vMRqbR .timeline-element {
+  margin-bottom: 50px;
+  position: relative;
+  word-wrap: break-word;
+  word-break: break-word;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+}
+.cid-s636vMRqbR .timeline-element:hover .mbr-timeline-date {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-s636vMRqbR .timeline-element:hover .timeline-text-content {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-s636vMRqbR .mbr-timeline-date,
+.cid-s636vMRqbR .timeline-text-content {
+  transition: all .4s;
+}
+.cid-s636vMRqbR .reverse {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-s636vMRqbR .reverse .timeline-text-content {
+  margin-right: 2rem;
+  margin-left: 0;
+}
+.cid-s636vMRqbR .reverse .time-line-date-content {
+  margin-left: 2rem;
+  margin-right: 0rem;
+}
+.cid-s636vMRqbR .reverse .time-line-date-content p {
+  float: left;
+}
+.cid-s636vMRqbR .iconBackground {
+  position: absolute;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 30px;
+  display: inline-block;
+  background-color: #ffffff;
+  top: 20px;
+  margin-left: -10px;
+}
+.cid-s636vMRqbR .separline:before {
+  top: 20px;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 2px;
+  background-color: #ffffff;
+  left: calc(50% - 1px);
+  height: calc(100% + 4rem);
+}
+@media (max-width: 768px) {
+  .cid-s636vMRqbR .iconBackground {
+    left: 0 !important;
+  }
+  .cid-s636vMRqbR .separline:before {
+    left: 0!important;
+  }
+  .cid-s636vMRqbR .timeline-text-content {
+    margin-left: 0 !important;
+  }
+  .cid-s636vMRqbR .time-line-date-content {
+    margin-right: 0 !important;
+  }
+  .cid-s636vMRqbR .time-line-date-content p {
+    float: left !important;
+  }
+  .cid-s636vMRqbR .reverse .time-line-date-content {
+    margin-left: 0 !important;
+  }
+  .cid-s636vMRqbR .reverse .timeline-text-content {
+    margin-right: 0 !important;
+  }
+}
+.cid-s636vMRqbR .reverseTimeline {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.cid-s636vUnL8u {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-s636vUnL8u .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-s636vUnL8u .timeline-text-content {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  margin-left: 2rem;
+}
+.cid-s636vUnL8u .timeline-text-content p {
+  margin-bottom: 0;
+}
+.cid-s636vUnL8u .time-line-date-content {
+  margin-right: 2rem;
+}
+.cid-s636vUnL8u .time-line-date-content p {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  float: right;
+}
+.cid-s636vUnL8u .timeline-element {
+  margin-bottom: 50px;
+  position: relative;
+  word-wrap: break-word;
+  word-break: break-word;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+}
+.cid-s636vUnL8u .timeline-element:hover .mbr-timeline-date {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-s636vUnL8u .timeline-element:hover .timeline-text-content {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-s636vUnL8u .mbr-timeline-date,
+.cid-s636vUnL8u .timeline-text-content {
+  transition: all .4s;
+}
+.cid-s636vUnL8u .reverse {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-s636vUnL8u .reverse .timeline-text-content {
+  margin-right: 2rem;
+  margin-left: 0;
+}
+.cid-s636vUnL8u .reverse .time-line-date-content {
+  margin-left: 2rem;
+  margin-right: 0rem;
+}
+.cid-s636vUnL8u .reverse .time-line-date-content p {
+  float: left;
+}
+.cid-s636vUnL8u .iconBackground {
+  position: absolute;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 30px;
+  display: inline-block;
+  background-color: #ffffff;
+  top: 20px;
+  margin-left: -10px;
+}
+.cid-s636vUnL8u .separline:before {
+  top: 20px;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 2px;
+  background-color: #ffffff;
+  left: calc(50% - 1px);
+  height: calc(100% + 4rem);
+}
+@media (max-width: 768px) {
+  .cid-s636vUnL8u .iconBackground {
+    left: 0 !important;
+  }
+  .cid-s636vUnL8u .separline:before {
+    left: 0!important;
+  }
+  .cid-s636vUnL8u .timeline-text-content {
+    margin-left: 0 !important;
+  }
+  .cid-s636vUnL8u .time-line-date-content {
+    margin-right: 0 !important;
+  }
+  .cid-s636vUnL8u .time-line-date-content p {
+    float: left !important;
+  }
+  .cid-s636vUnL8u .reverse .time-line-date-content {
+    margin-left: 0 !important;
+  }
+  .cid-s636vUnL8u .reverse .timeline-text-content {
+    margin-right: 0 !important;
+  }
+}
+.cid-s636vUnL8u .reverseTimeline {
+  display: flex;
+  flex-direction: column-reverse;
+}
 .cid-s1HqXIswsO .dropdown-item:before {
   font-family: MobiriseIcons !important;
   content: '\e966';
@@ -2511,91 +2850,6 @@ body {
     left: -1rem;
   }
 }
-.cid-s36ZpYUCqC {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-s36ZpYUCqC h2 {
-  text-align: center;
-}
-.cid-s36ZpYUCqC h3 {
-  text-align: center;
-  font-weight: 300;
-}
-.cid-s36ZpYUCqC p {
-  color: #767676;
-}
-.cid-s36ZpYUCqC img {
-  object-fit: cover;
-}
-.cid-s36ZpYUCqC .block-content {
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-s36ZpYUCqC .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-}
-.cid-s36ZpYUCqC .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-}
-.cid-s36ZpYUCqC .mbr-section-subtitle {
-  color: #149dcc;
-}
-.cid-s36ZpYUCqC .card-title {
-  font-weight: 500;
-}
-.cid-s36ZpYUCqC .card-img {
-  text-align: inherit;
-}
-.cid-s36ZpYUCqC .card-img span {
-  font-size: 48px;
-  color: #707070;
-}
-@media (min-width: 992px) {
-  .cid-s36ZpYUCqC .mbr-figure {
-    padding-right: 2rem;
-    padding-left: 2rem;
-    height: 100%;
-  }
-}
-@media (max-width: 991px) {
-  .cid-s36ZpYUCqC .mbr-figure {
-    padding-bottom: 2rem;
-    padding-top: 1rem;
-  }
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-s36ZpYUCqC .block-content {
-    flex-direction: row;
-    -webkit-flex-direction: row;
-    text-align: center;
-  }
-  .cid-s36ZpYUCqC .block-content .card {
-    flex-basis: 100%;
-    -webkit-flex-basis: 100%;
-  }
-  .cid-s36ZpYUCqC .card:nth-child(1) {
-    padding-bottom: 0!important;
-  }
-}
-.cid-s36ZpYUCqC .mbr-section-title {
-  color: #149dcc;
-}
-.cid-s36ZpYUCqC .mbr-section-text {
-  text-align: left;
-}
-.cid-s36ZpYUCqC .mbr-crt-title {
-  text-align: left;
-  color: #149dcc;
-}
 .cid-s377Z83TkF {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -2631,6 +2885,162 @@ body {
   .cid-s377Z83TkF .mbr-list li:not(:last-child) {
     margin-right: 1rem;
   }
+}
+.cid-s63993Nfnb {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-s63993Nfnb h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-s63993Nfnb p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-s63993Nfnb .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-s63993Nfnb .mbr-section-btn a {
+  margin: 0;
+}
+.cid-s63993Nfnb .mbr-text {
+  color: #767676;
+}
+.cid-s63993Nfnb .card-wrapper {
+  height: 100%;
+}
+@media (max-width: 767px) {
+  .cid-s63993Nfnb .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-s63993Nfnb H2 {
+  text-align: center;
+}
+.cid-s63dsOfN43 {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-s63dsOfN43 .content {
+    text-align: center;
+  }
+  .cid-s63dsOfN43 .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-s63dsOfN43 .img-logo img {
+  height: 6rem;
+}
+.cid-s63dsOfN43 .form-control {
+  margin-bottom: 1rem;
+  padding: 1.07em 1.07em;
+  background-color: #f5f5f5;
+  border: 1px solid #e8e8e8;
+  color: #656565;
+  line-height: 1.43;
+  min-height: 3.5em;
+  border-radius: .25rem;
+}
+.cid-s63dsOfN43 .form-control:focus,
+.cid-s63dsOfN43 .form-control:hover {
+  border: 1px solid #e8e8e8;
+  background-color: #f5f5f5;
+}
+.cid-s63dsOfN43 .form-group {
+  margin-bottom: 1rem;
+}
+.cid-s63dsOfN43 input::-webkit-input-placeholder,
+.cid-s63dsOfN43 textarea::-webkit-input-placeholder {
+  color: #656565;
+}
+.cid-s63dsOfN43 input:-moz-placeholder,
+.cid-s63dsOfN43 textarea:-moz-placeholder {
+  color: #656565;
+}
+.cid-s63dsOfN43 .jq-selectbox li,
+.cid-s63dsOfN43 .jq-selectbox li {
+  background-color: #f5f5f5;
+  color: #000000;
+}
+.cid-s63dsOfN43 .jq-selectbox li:hover,
+.cid-s63dsOfN43 .jq-selectbox li.selected {
+  background-color: #f5f5f5;
+  color: #000000;
+}
+.cid-s63dsOfN43 .jq-selectbox:hover .jq-selectbox__trigger-arrow {
+  border-top-color: #f5f5f5;
+}
+.cid-s63dsOfN43 .jq-selectbox .jq-selectbox__trigger-arrow {
+  border-top-color: #f5f5f5;
+}
+.cid-s63dsOfN43 textarea.form-control {
+  resize: none;
+}
+.cid-s63dsOfN43 .input-group-btn {
+  display: inline-block;
+}
+.cid-s63dsOfN43 .input-group-btn .btn {
+  margin: 0 !important;
+  padding: .75rem 1.5625rem !important;
+  text-transform: none;
+}
+.cid-s63dsOfN43 .form-group {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-s63dsOfN43 .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-s63dsOfN43 .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-s63dsOfN43 .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-s63dsOfN43 .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s63dsOfN43 .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s63dsOfN43 .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s63dsOfN43 .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-s63dsOfN43 .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-s63dsOfN43 .form-control,
+.cid-s63dsOfN43 .input-group-btn .btn {
+  border-radius: 3px;
 }
 .cid-s1HqXIswsO .dropdown-item:before {
   font-family: MobiriseIcons !important;
