--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2929,7 +2929,7 @@ body {
 .cid-s63dsOfN43 {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #2e2e2e;
+  background-color: #0f7699;
 }
 @media (max-width: 767px) {
   .cid-s63dsOfN43 .content {
